Time: 2 ms (83.77%) | Memory: 44.4 MB (92.93%) - LeetSync